module-b/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: module-b
  name: module-b
  namespace: vass-radar-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: module-b
  sessionAffinity: None
  type: ClusterIP
